# personal-medical-assistant

./: .gitignore  README.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml  requirements.txt
.codebuddy/agents/: 小程序ui设计师.md  高级开发工程师.md
.codebuddy/plans/: import-and-integrate-medical-knowledge_46c78ca8.md  import-medical-dialogues-to-vector-db_71e18d41(未完成).md  个人医疗助手项目重构计划_b57f94d2.md
langfuse/: docker-compose.yml  docker-compose.yml.example
miniprogram/: app.js  app.json  app.wxss  project.config.json  project.config.json.example  project.private.config.json
miniprogram/components/chat-bubble/: chat-bubble.js  chat-bubble.wxml  chat-bubble.wxss
miniprogram/components/member-card/: member-card.js  member-card.wxml  member-card.wxss
miniprogram/components/member-selector/: member-selector.js  member-selector.wxml  member-selector.wxss
miniprogram/components/vital-signs-card/: vital-signs-card.js  vital-signs-card.wxml  vital-signs-card.wxss
miniprogram/pages/chat/: chat.js  chat.json  chat.wxml  chat.wxss
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/profile/: profile.js  profile.wxml  profile.wxss
miniprogram/utils/: api.js  util.js
server/: __init__.py  config.py  main.py
server/agent/: __init__.py  graph.py  state.py
server/api/: __init__.py  chat.py  group.py  knowledge.py  member.py  report.py  user.py
server/models/: __init__.py  conversation.py  group.py  member.py  profile.py  report.py
server/services/: __init__.py  conversation_service.py  group_service.py  llm_service.py  member_service.py  memory_service.py  ocr_service.py  stream_manager.py  trace_service.py  user_service.py  vector_store.py
server/utils/: haodf_parser.py
(+46 files in other folders)
