[project]
name = "medical-qa-agent"
version = "0.1.0"
description = "智能医疗问答系统"
authors = [{name = "Medical Team"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LangChain 生态
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    # LLM & Embedding
    "openai>=1.10.0",
    "sentence-transformers>=2.2.2",
    # 向量存储
    "faiss-cpu>=1.7.4",
    # 检索增强
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # API & 网络
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    "aiofiles>=23.2.1",
    # JSON 处理
    "json-repair>=0.25.0",
    # Token 计数
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

#[tool.ruff]
#line-length = 100
#target-version = "py313"

#[tool.ruff.lint]
#select = ["E", "F", "I", "N", "W", "UP"]

#[tool.pytest.ini_options]
#asyncio_mode = "auto"
#testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportExplicitAny = false
reportAny = false
reportConstantRedefinition = false
reportCallIssue = "none"

# 代码整洁相关警告（建议保留）
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedCallResult = "none"
reportDeprecated = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"